--- a/rails_project/demo/app/views/events/edit.html.erb
+++ b/rails_project/demo/app/views/events/edit.html.erb
@@ -1,5 +1,4 @@
-<%= form_for @event, :url => { :controller => 'events', :action => 'update', :id => @event } do |f| %>
-  <%= f.label :name, "Name" %>
+<%= form_for @event, :url => event_path(@event), :method => :patch do |f| %>  <%= f.label :name, "Name" %>
   <%= f.text_field :name %>
 
   <%= f.label :description, "Description" %>
